--- a/finetun.ipynb
+++ b/finetun.ipynb
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "model_name = \"meta-llama/Llama-3.2-1B\"\n",
+    "model_name = \"nvidia/Meta-Llama-3.2-3B-Instruct-ONNX-INT4\"\n",
     "model = AutoModelForCausalLM.from_pretrained(model_name, device_map=\"auto\", load_in_8bit=True)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "tokenizer.pad_token = tokenizer.eos_token"
@@ -729,7 +729,7 @@
     "trainer = Trainer(\n",
     "    model=lora_model,\n",
     "    args=TrainingArguments(\n",
-    "        output_dir=\"Meta-Llama-3.2-1B-Instruct-finetuned\",\n",
+    "        output_dir=\"Meta-Llama-3.2-3B-Instruct-ONNX-INT4\",\n",
     "        learning_rate=2e-5,\n",
     "        per_device_train_batch_size=4,\n",
     "        per_device_eval_batch_size=4,\n",
@@ -865,7 +865,7 @@
     "from peft import PeftModel\n",
     "\n",
     "# Load the fine-tuned model with the adapter attached\n",
-    "model_with_adapter = PeftModel.from_pretrained(model, \"Meta-Llama-3.2-1B-Instruct-finetuned/checkpoint-8000\").to(\"cuda\")\n",
+    "model_with_adapter = PeftModel.from_pretrained(model, \"Meta-Llama-3.2-3B-Instruct-ONNX-INT4/checkpoint-8000\").to(\"cuda\")\n",
     "model_with_adapter.eval()\n",
     "inputs = tokenizer(\"Biometriya ma'noni anglatadi\", return_tensors=\"pt\")\n",
     "\n",
