--- a/finetun.ipynb
+++ b/finetun.ipynb
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "model_name = \"nvidia/Meta-Llama-3.2-3B-Instruct-ONNX-INT4\"\n",
+    "model_name = \"Vikhrmodels/Vikhr-Llama-3.2-1B-Instruct\"\n",
     "model = AutoModelForCausalLM.from_pretrained(model_name, device_map=\"auto\", load_in_8bit=True)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "tokenizer.pad_token = tokenizer.eos_token"
